# dtc-llm-slack-faq-enhancer

./: .dockerignore  .env.example  .gitignore  FAQ_PIPELINE_ARCHITECTURE.md  GITHUB_ENV_SETUP.md  QUESTION_CLASSIFIER_ARCHITECTURE.md  QUESTION_CLASSIFIER_ARCHITECTURE_v2.md  README.md  S3_Bucket_Update_Guide_v2.md  SLACK_API_TO_S3_RAW_PLAN.md  errors.txt  faq_pipeline_plan_uv_terraform_dlt_classifier.md  pyproject.toml  requirements.txt
.github/workflows/: 01-terraform-deploy.yml  02-bot-join-slack-channels.yml  02-slack-raw-upload-s3.yml  03-slack-raw-upload-s3.yml  04-read-faq.yml
classifier/: __init__.py  batch_run.py  daily_run.py  hybrid.py  llm_fallback.py  prefilter.py  setfit_model.py  types.py
data-ingestion/: Dockerfile  PARTITION_STRUCTURE.md
data-ingestion/pipeline/: courses.yml  faq_courses.yml  settings.py  slack_api_to_s3_raw.py  slack_pipeline.py
data-ingestion/question_classifiers/: QuestionDetector.py  QuestionDetector_tests.py
data-ingestion/readers/: __init__.py  slack_reader_historical.py
data-ingestion/scripts/: HYBRID_SEARCH_README.md  gdoc_faq_reader.py  hybrid_search.py  slack_bot_join_channels.py  test_hybrid_search.py  upload_historical_dumps.py
infra/terraform/s3/: main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
