[project]
name = "dtc-llm-slack-faq-enhancer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.177.0",
    "google-auth-oauthlib>=1.2.2",
    "llama-index>=0.13.0",
    "protobuf>=6.31.1",
    "slack-sdk>=3.36.0",
    "boto3>=1.40.3",
    "langchain>=0.3.27",
    "pandas<2.3.0",
    "pytest>=8.4.1",
    "transformers>=4.55.2",
    "torch>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[dependency-groups]
classify = [
    "datasets>=2.14.4",
    "duckdb>=1.3.2",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.1.0",
    "setfit>=1.0.3",
]
ingest = [
    "dlt>=1.15.0",
    "fsspec>=2025.7.0",
    "orjson>=3.11.1",
    "pyarrow>=21.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "s3fs>=2025.7.0",
]

