[project]
name = "dtc-llm-slack-faq-enhancer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[dependency-groups]
ingest = [
    "dlt>=1.15.0",
    "fsspec>=2024.6.0",
    "orjson>=3.11.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "slack-sdk>=3.36.0",
]
gdoc-faq = [
    "google-api-python-client>=2.145.0",
    "google-auth>=2.35.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "fastembed>=0.3.0",
]

